# iadventure

./: .env  .gitignore  Cargo.toml  commands.sh
commands/make/service/: new.sh  new2.sh
commands/make/service/_maker_system/: utils.pl  utils.sh
commands/make/service/_maker_system/skeletons/crates/services/<new_service_name>/src/: main.rs
commands/services/adventure/container-management/: build.sh  logs-cat.sh  logs-tail.sh  shell.sh  start.sh  stop.sh
commands/services/adventure/in-container/: start-service.sh
commands/services/gamemaster/container-management/: build.sh  logs-cat.sh  logs-tail.sh  shell.sh  start.sh  stop.sh
commands/services/gamemaster/in-container/: start-service.sh
commands/tools/prompt/: generate-for-debug.sh
crates/common/httpserver/src/: lib.rs
crates/common/services_manager/src/: lib.rs
crates/services/adventure/: Cargo.toml
crates/services/adventure/src/: main.rs
crates/services/gamemaster/: Cargo.toml
crates/services/gamemaster/src/: download_status.rs  main.rs
docker/adventure/: compose.yml
docker/gamemaster/: Dockerfile  compose.yml  download_model.py  post_build.sh
test/: .env  .env_empty  lib.rs  lib_empty.rs  lib_one.rs  script.pl  script.sh
