[package]
name = "gamemaster"
version = "0.1.0"
edition = "2024"

[dependencies]
httpserver = { path = "../../common/httpserver" }
services_manager = { path = "../../common/services_manager" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }